# nav2-spiral-search

./: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py
docs/: architecture.md  nav2_integration.md  state_machine.md
nav2_spiral_search/: cone_approach_node.py  cone_detection_pose_node.py  spiral_search_node.py
